--- a/front/styles.css
+++ b/front/styles.css
@@ -9,8 +9,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 70%;
-  padding-bottom: 20px;
+  width: 90%;
 }
 
 .form-background {
@@ -24,11 +23,12 @@
   background-position: center 40px;
   background-repeat: no-repeat;
   background-size: 80%;
+  margin-bottom: 40px;
 }
 /* Style the form container */
 .form-container {
   opacity: 1;
-  width: 50%;
+  width: 90%;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
@@ -43,6 +43,7 @@
 label {
   display: block;
   font-weight: bold;
+  margin-bottom: 3px;
 }
 
 input[type="text"],
@@ -74,6 +75,9 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
   background-color: #0056b3;
+}
+.arabic-select {
+  direction: rtl; /* Set text direction to right-to-left */
 }
 select {
   width: 100%;
@@ -114,7 +118,7 @@ select {
     width: 100%;
     padding: 30px;
     background: rgba(255, 255, 255, 0.2);
-    border: 2px dashed rgba(255, 255, 255, 0.2);
+    border: 5px dashed rgba(255, 255, 255, 0.2);
     text-align: center;
     transition: background 0.3s ease-in-out;
 
@@ -141,6 +145,161 @@ select {
     }
     .default {
       display: none;
+    }
+  }
+}
+
+#responseText {
+  width: 80%;
+  font-size: large;
+  text-align: center;
+}
+
+@media (min-width: 850px) {
+  /* Reset some default styles */
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
+  .banner-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    padding-bottom: 20px;
+  }
+
+  .form-background {
+    background-image: linear-gradient(
+        rgba(255, 255, 255, 0.8),
+        rgba(255, 255, 255, 0.8)
+      ),
+      url("background.png");
+    opacity: 1;
+    padding-top: 100px;
+    background-position: center 40px;
+    background-repeat: no-repeat;
+    background-size: 80%;
+  }
+  /* Style the form container */
+  .form-container {
+    opacity: 1;
+    width: 50%;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  /* Style the form elements */
+  .form-group {
+    margin-bottom: 20px;
+  }
+
+  label {
+    display: block;
+    font-weight: bold;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="number"],
+  input[type="tel"],
+  input[type="select"],
+  input[type="password"],
+  textarea,
+  option,
+  select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+    background-color: transparent;
+  }
+
+  input[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: transparent;
+  }
+
+  input[type="submit"]:hover {
+    background-color: #0056b3;
+  }
+  select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+  }
+
+  .error-message {
+    color: red;
+    font-size: 14px;
+  }
+
+  .success-message {
+    color: green;
+    font-size: 14px;
+  }
+
+  /* ===================== FILE INPUT ===================== */
+  .file-area {
+    width: 100%;
+    position: relative;
+
+    input[type="file"] {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      opacity: 0;
+      cursor: pointer;
+    }
+
+    .file-dummy {
+      width: 100%;
+      padding: 30px;
+      background: rgba(255, 255, 255, 0.2);
+      border: 2px dashed rgba(255, 255, 255, 0.2);
+      text-align: center;
+      transition: background 0.3s ease-in-out;
+
+      .success {
+        display: none;
+      }
+    }
+
+    &:hover .file-dummy {
+      background: rgba(255, 255, 255, 0.1);
+    }
+
+    input[type="file"]:focus + .file-dummy {
+      outline: 2px solid rgba(255, 255, 255, 0.5);
+      outline: -webkit-focus-ring-color auto 5px;
+    }
+
+    input[type="file"]:valid + .file-dummy {
+      border-color: rgba(0, 255, 0, 0.4);
+      background-color: rgba(0, 255, 0, 0.3);
+
+      .success {
+        display: inline-block;
+      }
+      .default {
+        display: none;
+      }
     }
   }
 }
